Fix Swagger UI loading